--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite --open",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "react": "^19.0.0",
@@ -22,6 +23,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
+    "prettier": "^3.5.3",
     "sass": "^1.85.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
